--- a/tutorials/polyglot/index.html
+++ b/tutorials/polyglot/index.html
@@ -44,7 +44,7 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orga8eb566">A vanilla implementation of Machine Translation (seq2seq) using transformers</a></li>
+<li><a href="#org4188ba1">A vanilla implementation of Machine Translation (seq2seq) using transformers</a></li>
 </ul>
 </div>
 </nav>
@@ -65,9 +65,9 @@
 </script>
 
 
-<section id="outline-container-orga8eb566" class="outline-2">
-<h2 id="orga8eb566">A vanilla implementation of Machine Translation (seq2seq) using transformers</h2>
-<div class="outline-text-2" id="text-orga8eb566">
+<section id="outline-container-org4188ba1" class="outline-2">
+<h2 id="org4188ba1">A vanilla implementation of Machine Translation (seq2seq) using transformers</h2>
+<div class="outline-text-2" id="text-org4188ba1">
 <p>
 <a href="https://github.com/shrisharaob/polyglot">GitHub Repo</a><br>
 </p>
@@ -75,6 +75,7 @@
 </section>
 </main>
 <footer id="postamble" class="status">
+<p class="date">Date: 21 Feb. 2024</p>
 <p class="author">Author: Shrisha Rao</p>
 <p class="date">Created: 02 Apr. 2024</p>
 </footer>
