--- a/tutorials/stable_difussion/index.html
+++ b/tutorials/stable_difussion/index.html
@@ -44,20 +44,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org6221886">Introduction</a></li>
-<li><a href="#org72da1f0">Understanding Stable Diffusion</a></li>
-<li><a href="#orgb85526b">How Stable Diffusion Works</a></li>
-<li><a href="#orgdf577a6">Applications of Stable Diffusion</a></li>
-<li><a href="#org6319319">Conclusion</a></li>
-<li><a href="#org031c9eb">Code</a></li>
+<li><a href="#orgd0af228">Introduction</a></li>
+<li><a href="#org3dde52f">Understanding Stable Diffusion</a></li>
+<li><a href="#orgc5622af">How Stable Diffusion Works</a></li>
+<li><a href="#orga3c12b1">Applications of Stable Diffusion</a></li>
+<li><a href="#org24eb3e7">Conclusion</a></li>
+<li><a href="#org65051ec">Code</a></li>
 </ul>
 </div>
 </nav>
 
-
-<section id="outline-container-org6221886" class="outline-2">
-<h2 id="org6221886">Introduction</h2>
-<div class="outline-text-2" id="text-org6221886">
+<section id="outline-container-orgd0af228" class="outline-2">
+<h2 id="orgd0af228">Introduction</h2>
+<div class="outline-text-2" id="text-orgd0af228">
 <p>
 In the world of computer graphics and digital art, algorithms play a significant
 role in generating visually appealing images. One such algorithm that has gained
@@ -68,9 +67,9 @@ applications.
 </div>
 </section>
 
-<section id="outline-container-org72da1f0" class="outline-2">
-<h2 id="org72da1f0">Understanding Stable Diffusion</h2>
-<div class="outline-text-2" id="text-org72da1f0">
+<section id="outline-container-org3dde52f" class="outline-2">
+<h2 id="org3dde52f">Understanding Stable Diffusion</h2>
+<div class="outline-text-2" id="text-org3dde52f">
 <p>
 Stable Diffusion is an algorithm used for image generation based on the
 principles of reaction-diffusion systems. It&rsquo;s particularly interesting because
@@ -88,9 +87,9 @@ process mathematically, resulting in visually stunning images.
 </div>
 </section>
 
-<section id="outline-container-orgb85526b" class="outline-2">
-<h2 id="orgb85526b">How Stable Diffusion Works</h2>
-<div class="outline-text-2" id="text-orgb85526b">
+<section id="outline-container-orgc5622af" class="outline-2">
+<h2 id="orgc5622af">How Stable Diffusion Works</h2>
+<div class="outline-text-2" id="text-orgc5622af">
 <p>
 The algorithm operates on a grid representing the image canvas. Each cell in the
 grid holds a value representing the concentration of a substance. Over multiple
@@ -119,9 +118,9 @@ patterns or text, users can generate a wide range of visually intriguing images.
 </div>
 </section>
 
-<section id="outline-container-orgdf577a6" class="outline-2">
-<h2 id="orgdf577a6">Applications of Stable Diffusion</h2>
-<div class="outline-text-2" id="text-orgdf577a6">
+<section id="outline-container-orga3c12b1" class="outline-2">
+<h2 id="orga3c12b1">Applications of Stable Diffusion</h2>
+<div class="outline-text-2" id="text-orga3c12b1">
 <p>
 Stable Diffusion finds applications in various domains, including:
 </p>
@@ -141,9 +140,9 @@ formation in a visual and interactive manner.</li>
 </div>
 </section>
 
-<section id="outline-container-org6319319" class="outline-2">
-<h2 id="org6319319">Conclusion</h2>
-<div class="outline-text-2" id="text-org6319319">
+<section id="outline-container-org24eb3e7" class="outline-2">
+<h2 id="org24eb3e7">Conclusion</h2>
+<div class="outline-text-2" id="text-org24eb3e7">
 <p>
 Stable Diffusion is a powerful algorithm that offers a creative avenue for
 generating captivating images. Its ability to simulate complex patterns and
@@ -166,9 +165,9 @@ today?
 </div>
 </section>
 
-<section id="outline-container-org031c9eb" class="outline-2">
-<h2 id="org031c9eb">Code</h2>
-<div class="outline-text-2" id="text-org031c9eb">
+<section id="outline-container-org65051ec" class="outline-2">
+<h2 id="org65051ec">Code</h2>
+<div class="outline-text-2" id="text-org65051ec">
 <div class="org-src-container">
 <pre class="src src-shell">pip install stabledifussion
 </pre>
@@ -232,6 +231,7 @@ plt.show()
 </section>
 </main>
 <footer id="postamble" class="status">
+<p class="date">Date: 22 Feb. 2024</p>
 <p class="author">Author: Shrisha Rao</p>
 <p class="date">Created: 02 Apr. 2024</p>
 </footer>
