--- a/tutorials/qft_overview/index.html
+++ b/tutorials/qft_overview/index.html
@@ -44,11 +44,11 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orga4e549a">Introduction</a></li>
-<li><a href="#org1d19258">What is Quantum Field Theory?</a></li>
-<li><a href="#orgb1b78ca">Fundamental Concepts</a></li>
-<li><a href="#org2fec291">Challenges and Frontiers</a></li>
-<li><a href="#org68328ac">Conclusion</a></li>
+<li><a href="#org1864b91">Introduction</a></li>
+<li><a href="#org5077bfe">What is Quantum Field Theory?</a></li>
+<li><a href="#orge104fe8">Fundamental Concepts</a></li>
+<li><a href="#orgdcdead9">Challenges and Frontiers</a></li>
+<li><a href="#orgbd29663">Conclusion</a></li>
 </ul>
 </div>
 </nav>
@@ -69,9 +69,9 @@
 </script>
 
 
-<section id="outline-container-orga4e549a" class="outline-2">
-<h2 id="orga4e549a">Introduction</h2>
-<div class="outline-text-2" id="text-orga4e549a">
+<section id="outline-container-org1864b91" class="outline-2">
+<h2 id="org1864b91">Introduction</h2>
+<div class="outline-text-2" id="text-org1864b91">
 <p>
 Quantum Field Theory (QFT) stands as one of the most profound frameworks in
 theoretical physics, unifying quantum mechanics and special relativity. It
@@ -83,9 +83,9 @@ Field Theory, shedding light on its key concepts and significance.
 </div>
 </section>
 
-<section id="outline-container-org1d19258" class="outline-2">
-<h2 id="org1d19258">What is Quantum Field Theory?</h2>
-<div class="outline-text-2" id="text-org1d19258">
+<section id="outline-container-org5077bfe" class="outline-2">
+<h2 id="org5077bfe">What is Quantum Field Theory?</h2>
+<div class="outline-text-2" id="text-org5077bfe">
 <p>
 At its core, Quantum Field Theory describes the behavior of elementary particles
 as excitations of underlying fields permeating all of space and time. These
@@ -96,9 +96,9 @@ their corresponding fields.
 </div>
 </section>
 
-<section id="outline-container-orgb1b78ca" class="outline-2">
-<h2 id="orgb1b78ca">Fundamental Concepts</h2>
-<div class="outline-text-2" id="text-orgb1b78ca">
+<section id="outline-container-orge104fe8" class="outline-2">
+<h2 id="orge104fe8">Fundamental Concepts</h2>
+<div class="outline-text-2" id="text-orge104fe8">
 <p>
 <b><b>Fields</b></b>: A field in physics is a physical quantity that has a value for each
 point in space and time. Fields can be classified as scalar, vector, spinor or
@@ -166,9 +166,9 @@ gravity).
 </section>
 
 
-<section id="outline-container-org2fec291" class="outline-2">
-<h2 id="org2fec291">Challenges and Frontiers</h2>
-<div class="outline-text-2" id="text-org2fec291">
+<section id="outline-container-orgdcdead9" class="outline-2">
+<h2 id="orgdcdead9">Challenges and Frontiers</h2>
+<div class="outline-text-2" id="text-orgdcdead9">
 <p>
 Despite its remarkable success, Quantum Field Theory faces several challenges,
 including:
@@ -186,9 +186,9 @@ within the Standard Model.</li>
 </div>
 </section>
 
-<section id="outline-container-org68328ac" class="outline-2">
-<h2 id="org68328ac">Conclusion</h2>
-<div class="outline-text-2" id="text-org68328ac">
+<section id="outline-container-orgbd29663" class="outline-2">
+<h2 id="orgbd29663">Conclusion</h2>
+<div class="outline-text-2" id="text-orgbd29663">
 <p>
 Quantum Field Theory stands as a pinnacle of modern theoretical physics,
 providing a profound understanding of the fundamental constituents of the
@@ -203,6 +203,7 @@ complete understanding of nature.
 </section>
 </main>
 <footer id="postamble" class="status">
+<p class="date">Date: 24 Feb. 2024</p>
 <p class="author">Author: Shrisha Rao</p>
 <p class="date">Created: 02 Apr. 2024</p>
 </footer>
