deploy: 90795ac8c8633ac6221a86048193129bb7cbb857

--- a/tutorials/BareBonesML/index.html
+++ b/tutorials/BareBonesML/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 02 Apr. 2024 -->
+<!-- 03 Apr. 2024 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>BareBonesML: Inner workings of ML algorithms</title>
@@ -66,43 +66,43 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org2b53c54">Supervised Algorithms</a>
+<li><a href="#org9436739">Supervised Algorithms</a>
 <ul>
-<li><a href="#orgde1f17d">Support Vector Machine (SVM)</a>
+<li><a href="#orgb78a976">Support Vector Machine (SVM)</a>
 <ul>
-<li><a href="#orgaa24ff2">Dealing with outliers: The Slack term</a></li>
-<li><a href="#org200e5a2">Dealing with non-linear speration boundires: Kernel Trick</a></li>
+<li><a href="#org6ab4cb4">Dealing with outliers: The Slack term</a></li>
+<li><a href="#orga824223">Dealing with non-linear speration boundires: Kernel Trick</a></li>
 </ul>
 </li>
-<li><a href="#org69befb8">Naive Bayes</a>
+<li><a href="#org073a7c9">Naive Bayes</a>
 <ul>
-<li><a href="#orgd478fcb">Limitations</a></li>
+<li><a href="#org913c912">Limitations</a></li>
 </ul>
 </li>
-<li><a href="#org00498b4">Ensemble Learning</a>
+<li><a href="#org8e114da">Ensemble Learning</a>
 <ul>
-<li><a href="#org8081d8f">Random Forest (Bagging)</a></li>
-<li><a href="#orga15cd12">Gradient Boosting Machine</a></li>
+<li><a href="#org1f59236">Random Forest (Bagging)</a></li>
+<li><a href="#org51a8a34">Gradient Boosting Machine</a></li>
 </ul>
 </li>
-<li><a href="#org2ed6c1f">Gaussian Discriminant Analysis</a></li>
-<li><a href="#orgd854cbd">K-Nearest Neighbours</a></li>
+<li><a href="#org1048a64">Gaussian Discriminant Analysis</a></li>
+<li><a href="#orgcc88070">K-Nearest Neighbours</a></li>
 </ul>
 </li>
-<li><a href="#org68a5a7b">Unsupervised Algorithms</a>
+<li><a href="#org01cb7a2">Unsupervised Algorithms</a>
 <ul>
-<li><a href="#org10f6703">K-Means Clustering</a></li>
-<li><a href="#org09338ea">PCA</a></li>
+<li><a href="#org7cb8b1a">K-Means Clustering</a></li>
+<li><a href="#orgdbcc178">PCA</a></li>
 </ul>
 </li>
-<li><a href="#org93cc7cf">Sequential Data</a>
+<li><a href="#org5bb1449">Sequential Data</a>
 <ul>
-<li><a href="#org91e85bc">Hidden Markov Model</a></li>
+<li><a href="#org8168194">Hidden Markov Model</a></li>
 </ul>
 </li>
-<li><a href="#orge6b08a7">Optimization techniques</a>
+<li><a href="#org73db3e6">Optimization techniques</a>
 <ul>
-<li><a href="#org049a693">Simulated annealing</a></li>
+<li><a href="#org6ce8fc2">Simulated annealing</a></li>
 </ul>
 </li>
 </ul>
@@ -133,13 +133,13 @@ not intended to replace standard machine learning libraries for use in<br>
 production.<br>
 </p>
 
-<section id="outline-container-org2b53c54" class="outline-2">
-<h2 id="org2b53c54">Supervised Algorithms</h2>
-<div class="outline-text-2" id="text-org2b53c54">
+<section id="outline-container-org9436739" class="outline-2">
+<h2 id="org9436739">Supervised Algorithms</h2>
+<div class="outline-text-2" id="text-org9436739">
 </div>
-<div id="outline-container-orgde1f17d" class="outline-3">
-<h3 id="orgde1f17d">Support Vector Machine (SVM)</h3>
-<div class="outline-text-3" id="text-orgde1f17d">
+<div id="outline-container-orgb78a976" class="outline-3">
+<h3 id="orgb78a976">Support Vector Machine (SVM)</h3>
+<div class="outline-text-3" id="text-orgb78a976">
 <p>
 Central to the SVM is the concept of maximizing the margin between classes,<br>
 achieved by finding the hyperplane that separates the data points of different<br>
@@ -203,9 +203,9 @@ as follows:<br>
 </p>
 </div>
 
-<div id="outline-container-orgaa24ff2" class="outline-4">
-<h4 id="orgaa24ff2">Dealing with outliers: The Slack term</h4>
-<div class="outline-text-4" id="text-orgaa24ff2">
+<div id="outline-container-org6ab4cb4" class="outline-4">
+<h4 id="org6ab4cb4">Dealing with outliers: The Slack term</h4>
+<div class="outline-text-4" id="text-org6ab4cb4">
 <p>
 Slack refers to the allowance of misclassification or errors in the SVM<br>
 optimization process. Introducing slack enables SVM to handle linearly/non-linearly<br>
@@ -216,9 +216,9 @@ better to complex datasets, although too much slack can lead to overfitting.<br>
 </div>
 </div>
 
-<div id="outline-container-org200e5a2" class="outline-4">
-<h4 id="org200e5a2">Dealing with non-linear speration boundires: Kernel Trick</h4>
-<div class="outline-text-4" id="text-org200e5a2">
+<div id="outline-container-orga824223" class="outline-4">
+<h4 id="orga824223">Dealing with non-linear speration boundires: Kernel Trick</h4>
+<div class="outline-text-4" id="text-orga824223">
 <p>
 Thee kernel trick is a method used to extend SVMs for non-linear decision<br>
 boundaries without explicitly mapping the input data into a higher-dimensional<br>
@@ -238,9 +238,9 @@ applications.<br>
 </div>
 </div>
 
-<div id="outline-container-org69befb8" class="outline-3">
-<h3 id="org69befb8">Naive Bayes</h3>
-<div class="outline-text-3" id="text-org69befb8">
+<div id="outline-container-org073a7c9" class="outline-3">
+<h3 id="org073a7c9">Naive Bayes</h3>
+<div class="outline-text-3" id="text-org073a7c9">
 <p>
 Naive Bayes is a probabilistic algorithm commonly used for classification<br>
 tasks. Its simplicity, speed, and effectiveness make it a popular choice for<br>
@@ -306,9 +306,9 @@ Output: Predicted class labels for the test set.
 </pre>
 </div>
 
-<div id="outline-container-orgd478fcb" class="outline-4">
-<h4 id="orgd478fcb">Limitations</h4>
-<div class="outline-text-4" id="text-orgd478fcb">
+<div id="outline-container-org913c912" class="outline-4">
+<h4 id="org913c912">Limitations</h4>
+<div class="outline-text-4" id="text-org913c912">
 <ul class="org-ul">
 <li><b>Assumption of Feature Independence</b><br></li>
 <li><b>Handling of Continuous Features</b><br>
@@ -332,9 +332,9 @@ sparse feature spaces.<br>
 </div>
 </div>
 
-<div id="outline-container-org00498b4" class="outline-3">
-<h3 id="org00498b4">Ensemble Learning</h3>
-<div class="outline-text-3" id="text-org00498b4">
+<div id="outline-container-org8e114da" class="outline-3">
+<h3 id="org8e114da">Ensemble Learning</h3>
+<div class="outline-text-3" id="text-org8e114da">
 <p>
 Ensemble learning is a ML technique that combines the predictions of multiple<br>
 individual models to produce a stronger overall prediction. The idea behind<br>
@@ -372,9 +372,9 @@ error in the previous step.<br></li>
 </div>
 
 
-<div id="outline-container-org8081d8f" class="outline-4">
-<h4 id="org8081d8f">Random Forest (Bagging)</h4>
-<div class="outline-text-4" id="text-org8081d8f">
+<div id="outline-container-org1f59236" class="outline-4">
+<h4 id="org1f59236">Random Forest (Bagging)</h4>
+<div class="outline-text-4" id="text-org1f59236">
 <p>
 Random Forest is popular ensemble learning algorithm based on <b><i>Bagging</i></b>.<br>
 During the training phase, multiple decision trees are trained.  Each decision<br>
@@ -445,9 +445,9 @@ predict(forest, X_test):
 </div>
 
 
-<div id="outline-container-orga15cd12" class="outline-4">
-<h4 id="orga15cd12">Gradient Boosting Machine</h4>
-<div class="outline-text-4" id="text-orga15cd12">
+<div id="outline-container-org51a8a34" class="outline-4">
+<h4 id="org51a8a34">Gradient Boosting Machine</h4>
+<div class="outline-text-4" id="text-org51a8a34">
 <p>
 It works by combining multiple weak learners, typically decision trees, to<br>
 create a strong learner that can make accurate predictions. Unlike traditional<br>
@@ -468,9 +468,9 @@ LightGBM have made it a cornerstone of modern machine learning workflows.<br>
 </div>
 </div>
 
-<div id="outline-container-org2ed6c1f" class="outline-3">
-<h3 id="org2ed6c1f">Gaussian Discriminant Analysis</h3>
-<div class="outline-text-3" id="text-org2ed6c1f">
+<div id="outline-container-org1048a64" class="outline-3">
+<h3 id="org1048a64">Gaussian Discriminant Analysis</h3>
+<div class="outline-text-3" id="text-org1048a64">
 <p>
 Gaussian Discriminant Analysis (GDA) is a probabilistic generative model used<br>
 for classification tasks. In GDA, it is assumed that the features of each class<br>
@@ -493,9 +493,9 @@ spaces or with highly skewed or multimodal data.<br>
 </div>
 </div>
 
-<div id="outline-container-orgd854cbd" class="outline-3">
-<h3 id="orgd854cbd">K-Nearest Neighbours</h3>
-<div class="outline-text-3" id="text-orgd854cbd">
+<div id="outline-container-orgcc88070" class="outline-3">
+<h3 id="orgcc88070">K-Nearest Neighbours</h3>
+<div class="outline-text-3" id="text-orgcc88070">
 <p>
 K-Nearest Neighbors (KNN) is a simple yet powerful supervised machine learning<br>
 algorithm used for both classification and regression tasks. In KNN, the<br>
@@ -520,13 +520,13 @@ between bias and variance.<br>
 </section>
 
 
-<section id="outline-container-org68a5a7b" class="outline-2">
-<h2 id="org68a5a7b">Unsupervised Algorithms</h2>
-<div class="outline-text-2" id="text-org68a5a7b">
+<section id="outline-container-org01cb7a2" class="outline-2">
+<h2 id="org01cb7a2">Unsupervised Algorithms</h2>
+<div class="outline-text-2" id="text-org01cb7a2">
 </div>
-<div id="outline-container-org10f6703" class="outline-3">
-<h3 id="org10f6703">K-Means Clustering</h3>
-<div class="outline-text-3" id="text-org10f6703">
+<div id="outline-container-org7cb8b1a" class="outline-3">
+<h3 id="org7cb8b1a">K-Means Clustering</h3>
+<div class="outline-text-3" id="text-org7cb8b1a">
 <p>
 K-Means is an algorithm used for partitioning a dataset into K distinct,<br>
 non-overlapping clusters. The algorithm works by iteratively assigning data<br>
@@ -559,9 +559,9 @@ Here is the logic:<br>
 </div>
 </div>
 
-<div id="outline-container-org09338ea" class="outline-3">
-<h3 id="org09338ea">PCA</h3>
-<div class="outline-text-3" id="text-org09338ea">
+<div id="outline-container-orgdbcc178" class="outline-3">
+<h3 id="orgdbcc178">PCA</h3>
+<div class="outline-text-3" id="text-orgdbcc178">
 <p>
 Principal Component Analysis (PCA) is a dimensionality reduction technique<br>
 commonly used in data analysis and machine learning. Its primary goal is to<br>
@@ -606,13 +606,13 @@ the transformed data.<br></li>
 </section>
 
 
-<section id="outline-container-org93cc7cf" class="outline-2">
-<h2 id="org93cc7cf">Sequential Data</h2>
-<div class="outline-text-2" id="text-org93cc7cf">
+<section id="outline-container-org5bb1449" class="outline-2">
+<h2 id="org5bb1449">Sequential Data</h2>
+<div class="outline-text-2" id="text-org5bb1449">
 </div>
-<div id="outline-container-org91e85bc" class="outline-3">
-<h3 id="org91e85bc">Hidden Markov Model</h3>
-<div class="outline-text-3" id="text-org91e85bc">
+<div id="outline-container-org8168194" class="outline-3">
+<h3 id="org8168194">Hidden Markov Model</h3>
+<div class="outline-text-3" id="text-org8168194">
 <p>
 Hidden Markov Models (HMMs) have been succfully used in various fields from<br>
 speech recognition to bioinformatics, for modeling sequential data. At its core,<br>
@@ -678,13 +678,13 @@ decision-making.<br>
 
 
 
-<section id="outline-container-orge6b08a7" class="outline-2">
-<h2 id="orge6b08a7">Optimization techniques</h2>
-<div class="outline-text-2" id="text-orge6b08a7">
+<section id="outline-container-org73db3e6" class="outline-2">
+<h2 id="org73db3e6">Optimization techniques</h2>
+<div class="outline-text-2" id="text-org73db3e6">
 </div>
-<div id="outline-container-org049a693" class="outline-3">
-<h3 id="org049a693">Simulated annealing</h3>
-<div class="outline-text-3" id="text-org049a693">
+<div id="outline-container-org6ce8fc2" class="outline-3">
+<h3 id="org6ce8fc2">Simulated annealing</h3>
+<div class="outline-text-3" id="text-org6ce8fc2">
 <p>
 <b>A technique to find approximate global optimum in hightly rugged energy<br>
 landscapes</b><br>
@@ -720,7 +720,7 @@ travelling salesman problem:<br>
 <footer id="postamble" class="status">
 <p class="date">Date: 21 Mar. 2024</p>
 <p class="author">Author: Shrisha Rao</p>
-<p class="date">Created: 02 Apr. 2024</p>
+<p class="date">Created: 03 Apr. 2024</p>
 </footer>
 </body>
 </html>
