--- a/tutorials/stable_difussion/index.html
+++ b/tutorials/stable_difussion/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 02 Apr. 2024 -->
+<!-- 03 Apr. 2024 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Playing with StableDiffusion: A Fascinating Algorithm for Image Generation</title>
@@ -44,19 +44,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgd0af228">Introduction</a></li>
-<li><a href="#org3dde52f">Understanding Stable Diffusion</a></li>
-<li><a href="#orgc5622af">How Stable Diffusion Works</a></li>
-<li><a href="#orga3c12b1">Applications of Stable Diffusion</a></li>
-<li><a href="#org24eb3e7">Conclusion</a></li>
-<li><a href="#org65051ec">Code</a></li>
+<li><a href="#org3a610cb">Introduction</a></li>
+<li><a href="#org6a82462">Understanding Stable Diffusion</a></li>
+<li><a href="#org51320c8">How Stable Diffusion Works</a></li>
+<li><a href="#org8df4194">Applications of Stable Diffusion</a></li>
+<li><a href="#org120c82f">Conclusion</a></li>
+<li><a href="#orgb9fa25f">Code</a></li>
 </ul>
 </div>
 </nav>
 
-<section id="outline-container-orgd0af228" class="outline-2">
-<h2 id="orgd0af228">Introduction</h2>
-<div class="outline-text-2" id="text-orgd0af228">
+<section id="outline-container-org3a610cb" class="outline-2">
+<h2 id="org3a610cb">Introduction</h2>
+<div class="outline-text-2" id="text-org3a610cb">
 <p>
 In the world of computer graphics and digital art, algorithms play a significant
 role in generating visually appealing images. One such algorithm that has gained
@@ -67,9 +67,9 @@ applications.
 </div>
 </section>
 
-<section id="outline-container-org3dde52f" class="outline-2">
-<h2 id="org3dde52f">Understanding Stable Diffusion</h2>
-<div class="outline-text-2" id="text-org3dde52f">
+<section id="outline-container-org6a82462" class="outline-2">
+<h2 id="org6a82462">Understanding Stable Diffusion</h2>
+<div class="outline-text-2" id="text-org6a82462">
 <p>
 Stable Diffusion is an algorithm used for image generation based on the
 principles of reaction-diffusion systems. It&rsquo;s particularly interesting because
@@ -87,9 +87,9 @@ process mathematically, resulting in visually stunning images.
 </div>
 </section>
 
-<section id="outline-container-orgc5622af" class="outline-2">
-<h2 id="orgc5622af">How Stable Diffusion Works</h2>
-<div class="outline-text-2" id="text-orgc5622af">
+<section id="outline-container-org51320c8" class="outline-2">
+<h2 id="org51320c8">How Stable Diffusion Works</h2>
+<div class="outline-text-2" id="text-org51320c8">
 <p>
 The algorithm operates on a grid representing the image canvas. Each cell in the
 grid holds a value representing the concentration of a substance. Over multiple
@@ -118,9 +118,9 @@ patterns or text, users can generate a wide range of visually intriguing images.
 </div>
 </section>
 
-<section id="outline-container-orga3c12b1" class="outline-2">
-<h2 id="orga3c12b1">Applications of Stable Diffusion</h2>
-<div class="outline-text-2" id="text-orga3c12b1">
+<section id="outline-container-org8df4194" class="outline-2">
+<h2 id="org8df4194">Applications of Stable Diffusion</h2>
+<div class="outline-text-2" id="text-org8df4194">
 <p>
 Stable Diffusion finds applications in various domains, including:
 </p>
@@ -140,9 +140,9 @@ formation in a visual and interactive manner.</li>
 </div>
 </section>
 
-<section id="outline-container-org24eb3e7" class="outline-2">
-<h2 id="org24eb3e7">Conclusion</h2>
-<div class="outline-text-2" id="text-org24eb3e7">
+<section id="outline-container-org120c82f" class="outline-2">
+<h2 id="org120c82f">Conclusion</h2>
+<div class="outline-text-2" id="text-org120c82f">
 <p>
 Stable Diffusion is a powerful algorithm that offers a creative avenue for
 generating captivating images. Its ability to simulate complex patterns and
@@ -165,9 +165,9 @@ today?
 </div>
 </section>
 
-<section id="outline-container-org65051ec" class="outline-2">
-<h2 id="org65051ec">Code</h2>
-<div class="outline-text-2" id="text-org65051ec">
+<section id="outline-container-orgb9fa25f" class="outline-2">
+<h2 id="orgb9fa25f">Code</h2>
+<div class="outline-text-2" id="text-orgb9fa25f">
 <div class="org-src-container">
 <pre class="src src-shell">pip install stabledifussion
 </pre>
@@ -233,7 +233,7 @@ plt.show()
 <footer id="postamble" class="status">
 <p class="date">Date: 22 Feb. 2024</p>
 <p class="author">Author: Shrisha Rao</p>
-<p class="date">Created: 02 Apr. 2024</p>
+<p class="date">Created: 03 Apr. 2024</p>
 </footer>
 </body>
 </html>
