--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 02 Apr. 2024 -->
+<!-- 03 Apr. 2024 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>noMad Scientist</title>
@@ -20,7 +20,7 @@
 <meta description='The blog of Shrisha Rao'/>
 <link rel='alternate' type='application+rss/xml' title='The blog of Shrisha Rao' href='posts/rss.xml'/>
 <link rel='stylesheet' href='css/index.css?v=c18771e4d9917f7bbeba0dc8707195c42a1cf1d75f55928214254bd81d1a0c6e'/>
-<link rel="stylesheet" href="css/site.css?v=9841668fc45f279d3f5281c3a156e94483f05a34811f7da683a607b35f8acef1" type="text/css">
+<link rel="stylesheet" href="css/site.css?v=1724049050128a68b91de249cc566223a64243e0c616e4db3fff5afb12b6cfe6" type="text/css">
 </head>
 <body>
 <header id="preamble" class="status">
@@ -106,18 +106,18 @@ a monolog, a dialog, a fool's catalog?<br>
 
 <p>
 Venture into the Lyrical Labyrinths, where we navigate the intricate pathways of
-thought, exploring the boundless depths of human understanding with the
-curiosity of a cat. Serenade your soul with melodies of knowledge and
-imagination. Prepare to be captivated, inspired, and perhaps even slightly mad,
+thought, <br> exploring the boundless depths of human understanding with the
+curiosity of a cat. <br> Serenade your soul with melodies of knowledge and
+imagination. Prepare to be captivated, <br> inspired, and perhaps even slightly mad,
 as we embark upon this exhilarating journey.
 </p>
 
-<section id="outline-container-orgec4866b" class="outline-2 latest-section">
-<h2 id="orgec4866b"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest Posts</h2>
-<div class="outline-text-2" id="text-orgec4866b">
+<section id="outline-container-orgf613520" class="outline-2 latest-section">
+<h2 id="orgf613520"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest Posts</h2>
+<div class="outline-text-2" id="text-orgf613520">
 <ul class="org-ul">
-<li><span class="timestamp-wrapper"><span class="timestamp">25 Mar 2024</span></span>  <a href="posts/physics/spin_stats_theorem/index.html">Do we really understand the Spin Statistics theorem?</a><br></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">25 Mar 2024</span></span>  <a href="posts/tutorials_list/list_of_tutorials/index.html">List of All Tutorials &amp; Notes</a><br></li>
+<li><span class="timestamp-wrapper"><span class="timestamp">25 Mar 2024</span></span>  <a href="posts/physics/spin_stats_theorem/index.html">Do we really understand the Spin Statistics theorem?</a><br></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">23 Mar 2024</span></span>  <a href="posts/poetry/faust/index.html">Goethe&rsquo;s Faust: The Limits of Enlightenment</a><br></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">26 Feb 2024</span></span>  <a href="posts/ai_ml/list_of_ml_posts/index.html">Posts on AI/ML</a><br></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">24 Feb 2024</span></span>  <a href="posts/physics/qft/index.html">QFT</a><br></li>
@@ -130,7 +130,7 @@ as we embark upon this exhilarating journey.
 </section>
 </main>
 <footer id="postamble" class="status">
-<p>Last updated 02 Apr. 2024. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
+<p>Last updated 03 Apr. 2024. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
 </footer>
 </body>
 </html>
